# xxcalc-rs

./: .coveralls.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
benches/: evaluator.rs  parser.rs  polynomial_calculator.rs  tokenizer.rs
encode_unicode/: index.html  struct.Utf16Char.html  struct.Utf16Iterator.html  struct.Utf8Char.html  struct.Utf8Iterator.html  trait.CharExt.html  trait.U16UtfExt.html  trait.U8UtfExt.html
examples/: basic.rs
nix/: enum.Errno.html  enum.Error.html  index.html  macro.convert_ioctl_res.html  macro.io.html  macro.ioc.html  macro.ioctl.html  macro.ior.html  macro.iorw.html  macro.iow.html  trait.NixPath.html  type.Result.html
rustyline/: index.html  sidebar-items.js  struct.Editor.html  type.Result.html
smallvec/: index.html  struct.Drain.html  struct.IntoIter.html  struct.SmallVec.html  trait.Array.html  trait.VecLike.html  type.SmallVec1.html  type.SmallVec16.html  type.SmallVec2.html  type.SmallVec24.html  type.SmallVec32.html  type.SmallVec4.html  type.SmallVec8.html
src/: calculator.rs  evaluator.rs  lib.rs  linear_solver.rs  main.rs  parser.rs  polynomial.rs  polynomial_calculator.rs  tokenizer.rs
xxcalc/: EvaluationError.t.html  Identifiers.t.html  ParsingError.t.html  StringProcessor.t.html  TokenList.t.html  TokensProcessor.t.html  TokensReducer.t.html  enum.EvaluationError.html  enum.ParsingError.html  enum.Token.html  index.html  sidebar-items.js  struct.Tokens.html  trait.StringProcessor.html  trait.TokensProcessor.html  trait.TokensReducer.html  type.Identifiers.html  (+1 more)
(+756 files in other folders)
