[package]
name = "xxcalc"
version = "0.2.1"
authors = ["Amadeusz Juskowiak <juskowiak@amadeusz.me>"]
keywords = ["calculator", "evaluator", "tokenizer", "lexer", "math"]
repository = "https://github.com/alfanick/xxcalc-rs.git"
homepage = "https://github.com/alfanick/xxcalc-rs.git"
documentation = "https://alfanick.github.io/xxcalc-rs/xxcalc/index.html"
license = "MIT"
readme = "README.md"
description = "Embeddable or standalone robust floating-point polynomial calculator"

[features]
interactive = ["rustyline"]

[[bin]]
name = "xxcalc"
doc = false

[dependencies]
rustyline = { version = "1.0.0", optional = true }
smallvec = "0.3.1"

[profile.release]
lto = true
opt-level = 3

[profile.bench]
lto = true
opt-level = 3
